--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 addopts = --tb=short
-norecursedirs = venv-* node_modules bower_components
+python_files = tests/**/*.py
+norecursedirs = venv-* node_modules bower_components vasa
